vs.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: customerio-events-service
  namespace: gloo-system
spec:
  virtualHost:
    domains:
      - '*'
    routes:
      - matchers:
          - prefix: /
        routeAction:
          single:
            upstream:
              name: mono-upstream
              namespace: gloo-system
        options:
          extauth:
            configRef:
                name: plugin-auth
                namespace: gloo-system
          timeout: '20s'
          retries:
            retryOn: 'connect-failure'
            numRetries: 3
            perTryTimeout: '5s'
          autoHostRewrite: true
